--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-        .navbar {
-            z-index: 50;
-            background-color: #2d3748; /* Темный фон для navbar */
-        }
         html {
             scroll-behavior: smooth;
         }
@@ -19,7 +15,7 @@
             position: absolute;
             right: 0;
             top: 100%;
-            background-color: #1f2937; /* Темный фон для dropdown */
+            background-color: #1f2937;
             min-width: 160px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
             border-radius: 0.5rem;
@@ -28,30 +24,51 @@
         .dropdown:hover .dropdown-content {
             display: block;
         }
+        .menu-button {
+            display: none;
+        }
+        @media (max-width: 768px) {
+            .navbar ul {
+                display: none;
+                flex-direction: column;
+                width: 100%;
+                background-color: #1f2937;
+                border-radius: 0.5rem;
+            }
+            .navbar ul.show {
+                display: flex;
+            }
+            .menu-button {
+                display: block;
+            }
+        }
     </style>
 </head>
 <body class="bg-gray-900 text-gray-100">
 
     <!-- Header Section -->
-    <header class="navbar py-4 fixed w-full top-0 left-0">
+    <header class="navbar py-4 fixed w-full top-0 left-0 bg-gray-900 bg-gradient-to-r from-gray-800 via-gray-900 to-gray-800 shadow-lg z-50">
         <nav class="container mx-auto flex justify-between items-center relative">
             <div class="flex items-center">
                 <img src="logo.png" alt="Логотип FARSOFT" class="h-10 w-10">
-                <h1 class="ml-3 text-2xl font-bold">FARSOFT</h1>
+                <h1 class="ml-3 text-2xl md:text-3xl font-bold text-white">FARSOFT</h1>
             </div>
-            <ul class="flex space-x-6">
-                <li><a href="#home" class="hover:text-purple-400">Главная</a></li>
-                <li><a href="#services" class="hover:text-purple-400">Услуги</a></li>
-                <li><a href="#about" class="hover:text-purple-400">О нас</a></li>
-                <li><a href="#portfolio" class="hover:text-purple-400">Проекты</a></li>
-                <li><a href="#contact" class="hover:text-purple-400">Контакты</a></li>
+            <button class="menu-button text-white md:hidden">
+                <i class="fas fa-bars fa-2x"></i>
+            </button>
+            <ul class="flex space-x-6 md:space-x-8 md:flex-row flex-col md:flex md:items-center absolute md:static top-full md:top-auto left-0 md:left-auto md:bg-transparent bg-gray-900 md:p-0 p-4 rounded-lg">
+                <li><a href="#home" class="block py-2 px-4 text-center text-gray-300 hover:bg-gray-700 md:hover:bg-transparent md:hover:text-purple-400">Главная</a></li>
+                <li><a href="#services" class="block py-2 px-4 text-center text-gray-300 hover:bg-gray-700 md:hover:bg-transparent md:hover:text-purple-400">Услуги</a></li>
+                <li><a href="#about" class="block py-2 px-4 text-center text-gray-300 hover:bg-gray-700 md:hover:bg-transparent md:hover:text-purple-400">О нас</a></li>
+                <li><a href="#portfolio" class="block py-2 px-4 text-center text-gray-300 hover:bg-gray-700 md:hover:bg-transparent md:hover:text-purple-400">Проекты</a></li>
+                <li><a href="#contact" class="block py-2 px-4 text-center text-gray-300 hover:bg-gray-700 md:hover:bg-transparent md:hover:text-purple-400">Контакты</a></li>
             </ul>
             <!-- Language Dropdown -->
             <div class="dropdown relative ml-6">
                 <button class="bg-gray-700 text-white py-2 px-4 rounded-lg focus:outline-none">
                     Язык
                 </button>
-                <div class="dropdown-content mt-2">
+                <div class="dropdown-content mt-2 rounded-lg">
                     <a href="#" class="block px-4 py-2 text-gray-200 hover:bg-gray-600">Русский</a>
                     <a href="#" class="block px-4 py-2 text-gray-200 hover:bg-gray-600">Ўзбекча</a>
                     <a href="#" class="block px-4 py-2 text-gray-200 hover:bg-gray-600">English</a>
@@ -65,29 +82,29 @@
         <!-- Hero Section -->
         <section id="home" class="bg-cover bg-center h-screen" style="background-image: url('hero-bg.jpg');">
             <div class="container mx-auto h-full flex flex-col justify-center items-center text-center text-white">
-                <h2 class="text-5xl font-bold mb-4">Мы создаем ИТ решения для вашего бизнеса</h2>
-                <p class="text-xl mb-6">Инновационные, надежные и эффективные решения для современных компаний.</p>
-                <a href="#services" class="bg-purple-700 hover:bg-purple-800 text-white py-3 px-8 rounded-lg font-bold">Узнать больше</a>
+                <h2 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-4">Мы создаем ИТ решения для вашего бизнеса</h2>
+                <p class="text-lg sm:text-xl md:text-2xl mb-6">Инновационные, надежные и эффективные решения для современных компаний.</p>
+                <a href="#services" class="bg-purple-700 hover:bg-purple-800 text-white py-3 px-6 rounded-lg font-bold">Узнать больше</a>
             </div>
         </section>
 
         <!-- About Us Section -->
         <section id="about" class="py-16 bg-gray-800">
             <div class="container mx-auto text-center">
-                <h2 class="text-4xl font-bold mb-6 text-purple-400">О FARSOFT</h2>
-                <p class="text-xl mb-12 text-gray-300">FARSOFT - ведущая ИТ компания, специализирующаяся на разработке программного обеспечения, ИТ-консалтинге и передовых технологиях. Наша миссия - предоставить надежные и инновационные решения, чтобы помочь бизнесу процветать в цифровом мире.</p>
-                <div class="grid grid-cols-1 sm:grid-cols-3 gap-8">
-                    <div class="p-6 bg-gray-700 rounded-lg shadow-md">
-                        <h3 class="text-3xl font-bold text-indigo-400">500+</h3>
-                        <p class="text-gray-400">Завершенных проектов</p>
+                <h2 class="text-3xl sm:text-4xl font-bold mb-6 text-purple-400">О FARSOFT</h2>
+                <p class="text-lg sm:text-xl mb-12 text-gray-300">FARSOFT - ведущая ИТ компания, специализирующаяся на разработке программного обеспечения, ИТ-консалтинге и передовых технологиях. Наша миссия - предоставить надежные и инновационные решения, чтобы помочь бизнесу процветать в цифровом мире.</p>
+                <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
+                    <div class="p-6 bg-gray-700 rounded-lg shadow-lg">
+                        <h3 class="text-2xl font-bold text-indigo-400">500+</h3>
+                        <p class="text-gray-300">Завершенных проектов</p>
                     </div>
-                    <div class="p-6 bg-gray-700 rounded-lg shadow-md">
-                        <h3 class="text-3xl font-bold text-indigo-400">300+</h3>
-                        <p class="text-gray-400">Довольных клиентов</p>
+                    <div class="p-6 bg-gray-700 rounded-lg shadow-lg">
+                        <h3 class="text-2xl font-bold text-indigo-400">300+</h3>
+                        <p class="text-gray-300">Довольных клиентов</p>
                     </div>
-                    <div class="p-6 bg-gray-700 rounded-lg shadow-md">
-                        <h3 class="text-3xl font-bold text-indigo-400">10+ лет</h3>
-                        <p class="text-gray-400">Опыт в индустрии</p>
+                    <div class="p-6 bg-gray-700 rounded-lg shadow-lg">
+                        <h3 class="text-2xl font-bold text-indigo-400">10+ лет</h3>
+                        <p class="text-gray-300">Опыт в индустрии</p>
                     </div>
                 </div>
             </div>
@@ -96,26 +113,26 @@
         <!-- Services Section -->
         <section id="services" class="py-16 bg-gray-900">
             <div class="container mx-auto text-center">
-                <h2 class="text-4xl font-bold mb-8 text-purple-400">Наши Услуги</h2>
+                <h2 class="text-3xl sm:text-4xl font-bold mb-8 text-purple-400">Наши Услуги</h2>
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
-                    <div class="p-6 bg-gray-800 rounded-lg shadow-md flex flex-col items-center">
+                    <div class="p-6 bg-gray-800 rounded-lg shadow-lg flex flex-col items-center">
                         <i class="fas fa-calculator text-4xl text-indigo-400 mb-4"></i>
-                        <h3 class="text-2xl font-bold mb-4 text-indigo-400">1C Бухгалтерия</h3>
+                        <h3 class="text-xl sm:text-2xl font-bold mb-4 text-indigo-400">1C Бухгалтерия</h3>
                         <p class="text-gray-300">Индивидуальные решения для автоматизации бухгалтерского учета и отчетности.</p>
                     </div>
-                    <div class="p-6 bg-gray-800 rounded-lg shadow-md flex flex-col items-center">
+                    <div class="p-6 bg-gray-800 rounded-lg shadow-lg flex flex-col items-center">
                         <i class="fas fa-laptop-code text-4xl text-indigo-400 mb-4"></i>
-                        <h3 class="text-2xl font-bold mb-4 text-indigo-400">Веб-разработка</h3>
+                        <h3 class="text-xl sm:text-2xl font-bold mb-4 text-indigo-400">Веб-разработка</h3>
                         <p class="text-gray-300">Адаптивные и современные сайты для оптимального пользовательского опыта.</p>
                     </div>
-                    <div class="p-6 bg-gray-800 rounded-lg shadow-md flex flex-col items-center">
+                    <div class="p-6 bg-gray-800 rounded-lg shadow-lg flex flex-col items-center">
                         <i class="fas fa-mobile-alt text-4xl text-indigo-400 mb-4"></i>
-                        <h3 class="text-2xl font-bold mb-4 text-indigo-400">Разработка мобильных приложений</h3>
+                        <h3 class="text-xl sm:text-2xl font-bold mb-4 text-indigo-400">Разработка мобильных приложений</h3>
                         <p class="text-gray-300">Приложения для iOS и Android для расширения охвата вашего бизнеса.</p>
                     </div>
-                    <div class="p-6 bg-gray-800 rounded-lg shadow-md flex flex-col items-center">
+                    <div class="p-6 bg-gray-800 rounded-lg shadow-lg flex flex-col items-center">
                         <i class="fas fa-cloud text-4xl text-indigo-400 mb-4"></i>
-                        <h3 class="text-2xl font-bold mb-4 text-indigo-400">Облачные вычисления</h3>
+                        <h3 class="text-xl sm:text-2xl font-bold mb-4 text-indigo-400">Облачные вычисления</h3>
                         <p class="text-gray-300">Масштабируемые и безопасные облачные решения для любого бизнеса.</p>
                     </div>
                 </div>
@@ -125,13 +142,13 @@
         <!-- Portfolio Section -->
         <section id="portfolio" class="py-16 bg-gray-800">
             <div class="container mx-auto text-center">
-                <h2 class="text-4xl font-bold mb-8 text-purple-400">Наши Проекты</h2>
+                <h2 class="text-3xl sm:text-4xl font-bold mb-8 text-purple-400">Наши Проекты</h2>
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-8">
-                    <div class="p-6 bg-gray-700 rounded-lg shadow-md">
+                    <div class="p-6 bg-gray-700 rounded-lg shadow-lg">
                         <h3 class="text-2xl font-bold mb-4 text-indigo-400">Проект 1</h3>
                         <p class="text-gray-300">Разработано инновационное программное решение для оптимизации операций клиента.</p>
                     </div>
-                    <div class="p-6 bg-gray-700 rounded-lg shadow-md">
+                    <div class="p-6 bg-gray-700 rounded-lg shadow-lg">
                         <h3 class="text-2xl font-bold mb-4 text-indigo-400">Проект 2</h3>
                         <p class="text-gray-300">Создана полностью интегрированная облачная платформа для глобального предприятия.</p>
                     </div>
@@ -142,13 +159,13 @@
         <!-- Contact Section -->
         <section id="contact" class="py-16 bg-gray-900">
             <div class="container mx-auto text-center">
-                <h2 class="text-4xl font-bold mb-6 text-purple-400">Свяжитесь с нами</h2>
-                <p class="text-xl mb-12 text-gray-300">Есть идея для проекта? Давайте обсудим ваш следующий большой шаг!</p>
+                <h2 class="text-3xl sm:text-4xl font-bold mb-6 text-purple-400">Свяжитесь с нами</h2>
+                <p class="text-lg sm:text-xl mb-12 text-gray-300">Есть идея для проекта? Давайте обсудим ваш следующий большой шаг!</p>
                 <form class="max-w-lg mx-auto space-y-4">
-                    <input type="text" placeholder="Ваше имя" class="w-full p-4 bg-gray-800 text-white border border-gray-600 rounded-lg">
-                    <input type="email" placeholder="Ваш Email" class="w-full p-4 bg-gray-800 text-white border border-gray-600 rounded-lg">
-                    <textarea placeholder="Ваше сообщение" class="w-full p-4 bg-gray-800 text-white border border-gray-600 rounded-lg"></textarea>
-                    <button type="submit" class="bg-purple-700 hover:bg-purple-800 text-white py-3 px-6 rounded-lg font-bold w-full">Отправить</button>
+                    <input type="text" placeholder="Ваше имя" class="w-full p-4 bg-gray-800 text-white border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500">
+                    <input type="email" placeholder="Ваш Email" class="w-full p-4 bg-gray-800 text-white border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500">
+                    <textarea placeholder="Ваше сообщение" class="w-full p-4 bg-gray-800 text-white border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500"></textarea>
+                    <button type="submit" class="bg-purple-700 hover:bg-purple-800 text-white py-3 px-6 rounded-lg font-bold w-full focus:outline-none focus:ring-2 focus:ring-purple-500">Отправить</button>
                 </form>
             </div>
         </section>
@@ -165,6 +182,13 @@
             </div>
         </div>
     </footer>
+
+    <!-- Script for Mobile Menu Toggle -->
+    <script>
+        document.querySelector('.menu-button').addEventListener('click', function() {
+            document.querySelector('.navbar ul').classList.toggle('show');
+        });
+    </script>
 
 </body>
 </html>
