Edited Service section

--- a/index.html
+++ b/index.html
@@ -111,33 +111,34 @@
         </section>
 
         <!-- Services Section -->
-        <section id="services" class="py-16 bg-gray-900">
-            <div class="container mx-auto text-center">
-                <h2 class="text-3xl sm:text-4xl font-bold mb-8 text-purple-400">Наши Услуги</h2>
-                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
-                    <div class="p-6 bg-gray-800 rounded-lg shadow-lg flex flex-col items-center">
-                        <i class="fas fa-calculator text-4xl text-indigo-400 mb-4"></i>
-                        <h3 class="text-xl sm:text-2xl font-bold mb-4 text-indigo-400">1C Бухгалтерия</h3>
-                        <p class="text-gray-300">Индивидуальные решения для автоматизации бухгалтерского учета и отчетности.</p>
-                    </div>
-                    <div class="p-6 bg-gray-800 rounded-lg shadow-lg flex flex-col items-center">
-                        <i class="fas fa-laptop-code text-4xl text-indigo-400 mb-4"></i>
-                        <h3 class="text-xl sm:text-2xl font-bold mb-4 text-indigo-400">Веб-разработка</h3>
-                        <p class="text-gray-300">Адаптивные и современные сайты для оптимального пользовательского опыта.</p>
-                    </div>
-                    <div class="p-6 bg-gray-800 rounded-lg shadow-lg flex flex-col items-center">
-                        <i class="fas fa-mobile-alt text-4xl text-indigo-400 mb-4"></i>
-                        <h3 class="text-xl sm:text-2xl font-bold mb-4 text-indigo-400">Разработка мобильных приложений</h3>
-                        <p class="text-gray-300">Приложения для iOS и Android для расширения охвата вашего бизнеса.</p>
-                    </div>
-                    <div class="p-6 bg-gray-800 rounded-lg shadow-lg flex flex-col items-center">
-                        <i class="fas fa-cloud text-4xl text-indigo-400 mb-4"></i>
-                        <h3 class="text-xl sm:text-2xl font-bold mb-4 text-indigo-400">Облачные вычисления</h3>
-                        <p class="text-gray-300">Масштабируемые и безопасные облачные решения для любого бизнеса.</p>
-                    </div>
-                </div>
+<section id="services" class="py-16 bg-gray-900">
+    <div class="container mx-auto text-center">
+        <h2 class="text-3xl sm:text-4xl font-bold mb-8 text-purple-400">Наши Услуги</h2>
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
+            <div class="p-6 bg-gray-800 rounded-lg shadow-lg flex flex-col items-center">
+                <i class="fas fa-calculator text-4xl text-indigo-400 mb-4"></i>
+                <h3 class="text-xl sm:text-2xl font-bold mb-4 text-indigo-400">1C Бухгалтерия</h3>
+                <p class="text-gray-300">Индивидуальные решения для автоматизации бухгалтерского учета и отчетности.</p>
             </div>
-        </section>
+            <div class="p-6 bg-gray-800 rounded-lg shadow-lg flex flex-col items-center">
+                <i class="fas fa-laptop-code text-4xl text-indigo-400 mb-4"></i>
+                <h3 class="text-xl sm:text-2xl font-bold mb-4 text-indigo-400">Веб-разработка</h3>
+                <p class="text-gray-300">Адаптивные и современные сайты для оптимального пользовательского опыта.</p>
+            </div>
+            <div class="p-6 bg-gray-800 rounded-lg shadow-lg flex flex-col items-center">
+                <i class="fas fa-mobile-alt text-4xl text-indigo-400 mb-4"></i>
+                <h3 class="text-xl sm:text-2xl font-bold mb-4 text-indigo-400">Разработка мобильных приложений</h3>
+                <p class="text-gray-300">Приложения для iOS и Android для расширения охвата вашего бизнеса.</p>
+            </div>
+            <div class="p-6 bg-gray-800 rounded-lg shadow-lg flex flex-col items-center">
+                <i class="fas fa-robot text-4xl text-indigo-400 mb-4"></i>
+                <h3 class="text-xl sm:text-2xl font-bold mb-4 text-indigo-400">Создание телеграмм ботов</h3>
+                <p class="text-gray-300">Разработка умных и функциональных ботов для автоматизации процессов в Telegram.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
 
         <!-- Portfolio Section -->
         <section id="portfolio" class="py-16 bg-gray-800">
